task: fix visibility of burger button

--- a/src/components/BurgerButton/BurgerButton.module.css
+++ b/src/components/BurgerButton/BurgerButton.module.css
@@ -2,9 +2,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  width: 24px;
-  height: 18px;
-  background: none;
+  gap: 4px;
   border: none;
   cursor: pointer;
   padding: 0;
@@ -12,6 +10,7 @@
 
 .burger span {
   display: block;
+  width: 24px;
   height: 3px;
   background-color: var(--color-black-100);
   border-radius: 2px;
